--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Questionnaire/Success.cshtml
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Questionnaire/Success.cshtml
@@ -1,5 +1,7 @@
 ﻿@model WineExhibitionQuestionnaire.DataProvider.CLIENT_DATA
 
+<script src="@Url.Content("~/Scripts/jquery-1.10.2.js")" type="text/javascript"></script>
+
 <h2>@Resources.LocRes.Success_Header</h2>
 <h5>@Resources.LocRes.Success_Text</h5>
 <br />
@@ -12,3 +14,11 @@
         @(Model.PARTICIPATE != 2 ? String.Format(Resources.LocRes.Success_Size, Model.PARTICIPATE == 1 ? Model.STAND_SIZE + " m²" : Resources.LocRes.Success_Similar) : "")
     </p>
 </div>
+
+<script>
+    $("#language").on("change", function () {
+        var lang = $(this).val();
+
+        window.location.href = '@Url.Action("Success", "Questionnaire")' + '?orderId=' + '@Model.ID' + '&language=' + lang;
+    });
+</script>
