--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_Layout.cshtml
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <title></title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @{ 
+        var lang = ViewData["language"] ?? "de-DE";
+    }
 
 </head>
 <body>
@@ -18,6 +21,16 @@
                 </a>
             </div>
         </div>
+        <table>
+            <tr>
+                <th>
+                    <select class="form-control" style="margin-top:12px; margin-left:900px; width:auto" name="language" id="language">
+                        <option @(lang.Equals("de-DE")? "selected" : "") value="de-DE">Deutsch</option>
+                        <option @(lang.Equals("en-EN")? "selected" : "") value="en-EN">English</option>
+                    </select>
+                </th>
+            </tr>
+        </table>
     </div>
 </div>
 <div class="container body-content">
