CSS Header für Sprachwahl verbessert

--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_Layout.cshtml
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
                 </a>
             </div>
         </div>
-        <table>
+        <table style="float: right;">
             <tr>
                 <th>
-                    <select class="form-control" style="margin-top:12px; margin-left:900px; width:auto" name="language" id="language">
+                    <select class="form-control" style="margin-top:10px; width:auto" name="language" id="language">
                         <option @(lang.Equals("de-DE")? "selected" : "") value="de-DE">Deutsch</option>
                         <option @(lang.Equals("en-EN")? "selected" : "") value="en-EN">English</option>
                     </select>
