Layout für Smartphone angepasst, Formfehler behoben, Fehlermeldungen detaillierter anzeigen hinzugefügt

--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Admin/Index.cshtml
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Admin/Index.cshtml
@@ -73,6 +73,10 @@
     }
 </table>
 
+<div class="navbar-header">
+    <button class="btn btn-primary" style="margin-top:10px" onclick="@("window.location.href='" + @Url.Action("Dump", "Admin") + "'");">Download Tabelle</button>
+</div>
+
 
 <script>
 
