--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_AdminLayout.cshtml
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_AdminLayout.cshtml
@@ -13,22 +13,24 @@
 <body>
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header pull-left">
             <div class="site-logo sticky-logo navigation-logo">
                 <a href="https://www.wine-trophy.com/" title="DWM – Deutsche Wein Marketing GmbH" rel="home">
                     <img src="/Content/DWM-logo.png" alt="DWM – Deutsche Wein Marketing GmbH" class="is-logo-image">
                 </a>
             </div>
         </div>
-        <table style="float: right;">
-            <tr>
-                <th>
-                    <div class="navbar-header">
-                        <button class="btn btn-primary" style="margin-top:10px" onclick="logout()">Logout</button>
-                    </div>
-                </th>
-            </tr>
-        </table>
+        <div class="navbar-header pull-right">
+            <table style="float: right;">
+                <tr>
+                    <th>
+                        <div class="navbar-header" style="padding-right: 20px">
+                            <button class="btn btn-primary" style="margin-top:10px" onclick="logout()">Logout</button>
+                        </div>
+                    </th>
+                </tr>
+            </table>
+        </div>
     </div>
 </div>
 <div class="container body-content">
