--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_Layout.cshtml
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_Layout.cshtml
@@ -12,30 +12,32 @@
 
 </head>
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-inverse navbar-fixed-top ">
     <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header pull-left">
             <div class="site-logo sticky-logo navigation-logo">
                 <a href="https://www.wine-trophy.com/" title="DWM – Deutsche Wein Marketing GmbH" rel="home">
                     <img src="/Content/DWM-logo.png" alt="DWM – Deutsche Wein Marketing GmbH" class="is-logo-image">
                 </a>
             </div>
         </div>
-        <table style="float: right;">
-            <tr>
-                <th>
-                    <select class="form-control" style="margin-top:10px; width:auto" name="language" id="language">
-                        <option @(lang.Equals("de-DE")? "selected" : "") value="de-DE">Deutsch</option>
-                        <option @(lang.Equals("en-EN")? "selected" : "") value="en-EN">English</option>
-                    </select>
-                </th>
-                <th style="padding-left: 30px">
-                    <div class="navbar-header">
-                        <button class="btn btn-primary" style="margin-top:10px" onclick="@("window.location.href='" + @Url.Action("Login", "Account") + "'");">Login</button>
-                    </div>
-                </th>
-            </tr>
-        </table>
+        <div class="navbar-header pull-right">
+            <table>
+                <tr>
+                    <th>
+                        <select class="form-control" style="margin-top:10px; width:auto" name="language" id="language">
+                            <option @(lang.Equals("de-DE") ? "selected" : "") value="de-DE">Deutsch</option>
+                            <option @(lang.Equals("en-EN") ? "selected" : "") value="en-EN">English</option>
+                        </select>
+                    </th>
+                    <th style="padding-left: 20px; padding-right: 20px">
+                        <div class="navbar-header">
+                            <button class="btn btn-primary" style="margin-top:10px" onclick="@("window.location.href='" + @Url.Action("Login", "Account") + "'");">Login</button>
+                        </div>
+                    </th>
+                </tr>
+            </table>
+        </div>
     </div>
 </div>
 <div class="container body-content">
