culture identifier von en-EN zu en-GB geändert

--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_Layout.cshtml
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     <th>
                         <select class="form-control" style="margin-top:10px; width:auto" name="language" id="language">
                             <option @(lang.Equals("de-DE") ? "selected" : "") value="de-DE">Deutsch</option>
-                            <option @(lang.Equals("en-EN") ? "selected" : "") value="en-EN">English</option>
+                            <option @(lang.Equals("en-GB") ? "selected" : "") value="en-GB">English</option>
                         </select>
                     </th>
                     <th style="padding-left: 20px; padding-right: 20px">
