Seitenleiste zu Expandable List Adapter geändert um Kategorien besser gruppieren zu können

--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/drawer_list_item.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/drawer_list_item.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:background="?android:attr/activatedBackgroundIndicator"
@@ -18,4 +18,4 @@
         android:layout_toRightOf="@+id/navDrawerCheckBox"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
-</RelativeLayout>
+</LinearLayout>
