--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_search.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_search.xml
@@ -66,14 +66,13 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ListView
-    android:id="@+id/list_slidermenu"
-    android:layout_width="240dp"
-    android:layout_height="match_parent"
-    android:layout_gravity="start"
-    android:choiceMode="singleChoice"
-    android:background="@color/colorPrimary"
-    android:divider="@android:color/transparent"
-    android:dividerHeight="0dp"/>
+    <ExpandableListView
+        android:id="@+id/list_slidermenu"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:background="@color/colorPrimary"
+        android:dividerHeight="0dp"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
