--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/drawer_list_header.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/drawer_list_header.xml
@@ -1,9 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:background="?android:attr/activatedBackgroundIndicator"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:padding ="10dp">
+    android:paddingLeft="40dp"
+    android:paddingTop="13dp">
 
     <TextView
         android:id="@+id/navDrawerTextViewName"
@@ -12,4 +13,4 @@
         android:layout_centerVertical="true"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
-</RelativeLayout>
+</LinearLayout>
