--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_search.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_search.xml
@@ -16,35 +16,56 @@
             layout="@layout/toolbar_default" />
 
         <LinearLayout
-            android:id="@+id/linearLayout"
+            android:id="@+id/linearLayoutVertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:layout_constraintVertical_bias="0.060000002">
 
-            <EditText
-                android:id="@+id/txtStorageNumber"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Weinname"
-                android:imeOptions="actionDone"
-                android:inputType="text"
-                android:text=""
-                android:textAlignment="center" />
-
-            <Button
-                android:id="@+id/btnSearch"
+            <LinearLayout
+                android:id="@+id/linearLayoutSearch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/buttonPrimary"
-                android:text="@string/search_button"
-                android:textColor="@color/buttonTextPrimary" />
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                app:layout_constraintVertical_bias="0.060000002">
 
+                <EditText
+                    android:id="@+id/txtStorageNumber"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionDone"
+                    android:ems="10"
+                    android:hint="Weinname"
+                    android:inputType="text"
+                    android:text=""
+                    android:textAlignment="center" />
+
+                <Button
+                    android:id="@+id/btnSearch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/buttonPrimary"
+                    android:text="@string/search_button"
+                    android:textColor="@color/buttonTextPrimary" />
+
+            </LinearLayout>
+
+            <ListView
+            android:id="@+id/wineList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:choiceMode="singleChoice"
+            android:background="@color/colorPrimary"
+            android:dividerHeight="0dp"/>
         </LinearLayout>
 
         <RelativeLayout
