--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/drawer_list_item.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/drawer_list_item.xml
@@ -1,12 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linearLayout"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:background="?android:attr/activatedBackgroundIndicator"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
+    android:clickable="true"
     android:padding ="10dp">
 
     <CheckBox
         android:id="@+id/navDrawerCheckBox"
+        android:clickable="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
