--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_search.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_search.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,19 +18,23 @@
 
         <LinearLayout
             android:id="@+id/linearLayoutVertical"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            app:layout_constraintVertical_bias="0.060000002">
+            app:layout_constraintVertical_bias="0.0">
 
             <LinearLayout
                 android:id="@+id/linearLayoutSearch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -41,9 +46,9 @@
                     android:id="@+id/txtStorageNumber"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:imeOptions="actionDone"
                     android:ems="10"
                     android:hint="Weinname"
+                    android:imeOptions="actionDone"
                     android:inputType="text"
                     android:text=""
                     android:textAlignment="center" />
@@ -59,13 +64,17 @@
             </LinearLayout>
 
             <ListView
-            android:id="@+id/wineList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:choiceMode="singleChoice"
-            android:background="@color/colorPrimary"
-            android:dividerHeight="0dp"/>
+                android:id="@+id/wineList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorPrimary"
+                android:choiceMode="singleChoice"
+                android:dividerHeight="0dp">
+
+            </ListView>
+
         </LinearLayout>
 
         <RelativeLayout
