Filter Reset Button hinzugefügt; ausgewählte Facets werden an oberster Stelle angegeben; Facetgruppe die ausgewähltes Facet beinhaltet wird farblich hervorgehoben; einzelne Facets herausgefiltert

--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_search.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_search.xml
@@ -44,7 +44,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="Weinname"
+                    android:hint="@string/placeholder_search"
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     android:text=""
@@ -101,13 +101,37 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ExpandableListView
-        android:id="@+id/list_slidermenu"
-        android:layout_width="240dp"
+    <LinearLayout
+        android:id="@+id/sliderLayout"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:choiceMode="singleChoice"
+        android:orientation="vertical"
         android:background="@color/colorPrimary"
-        android:dividerHeight="0dp"/>
+        android:layout_gravity="start">
+
+        <Button
+            android:id="@+id/btnReset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/buttonPrimary"
+            android:text="@string/reset_button"
+            android:textColor="@color/buttonTextPrimary"
+            android:layout_gravity="center"
+            android:padding="15dp"/>
+
+        <View android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
+
+        <ExpandableListView
+            android:id="@+id/list_slidermenu"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:choiceMode="singleChoice"
+            android:background="@color/colorPrimary"
+            android:dividerHeight="0dp"/>
+
+    </LinearLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
