Activity für detailliertere Informationen des Weins hinzugefügt

--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/winedata.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/winedata.xml
@@ -1,46 +1,25 @@
 <resources>
-    <string name="wine_name">Wein Name</string>
-    <string name="add_info">Zusatz Info</string>
-    <string name="year">Jahrgang</string>
-    <string name="country">Anbauland</string>
-    <string name="area">Gebiet</string>
-    <string name="region">Region</string>
-    <string name="wine_category">Kategorie</string>
-    <string name="flavour">Geschmack</string>
-    <string name="quality">Qualitätsstufe</string>
-    <string name="type">Wein Art</string>
-    <string name="vinification">Vinifikation</string>
-    <string name="bottle_volume">Flaschengröße</string>
-    <string name="organic">Biologisch</string>
-    <string name="unfiltered">Ungefiltert</string>
-    <string name="barrel_sample">Fassprobe</string>
-    <string name="sugar">Restzucker</string>
-    <string name="alcohol">Alkoholgehalt</string>
-    <string name="acidity">Säuregehalt</string>
-    <string name="sulfur">Schwefelgehalt</string>
-    <string name="density">Relative Dichte</string>
-    <string name="carbondioxide">Kohlendioxid</string>
-    <string name="bottle_amount">Anzahl Flaschen</string>
-    <string name="liter_amount">Anzahl Liter</string>
-    <string name="price">Verkaufspreis</string>
-    <string name="presenter">Einreicher Firma</string>
-    <string name="client">Kunde Firma</string>
-    <string name="producer">Produzent Firma</string>
-    <string name="importeur">Importeur Firma</string>
-    <string name="client_number">Kundennummer</string>
-    <string name="storage_number">Lagernummer</string>
-    <string name="code">Link ID</string>
-    <string name="is_action">Aktionswein</string>
-    <string name="imported">Importiert</string>
-    <string name="barcode">Barcode</string>
-    <string name="created_at">Erstellt am</string>
-    <string name="ranking">Bewertung Rang</string>
-    <string name="result">Endergebnis</string>
-    <string name="deleted">Ist gelöscht</string>
-    <string name="internal_comment">Interner Kommentar</string>
+    <string name="wine_name">Wein Name:</string>
+    <string name="year">Jahrgang:</string>
+    <string name="country">Anbauland:</string>
+    <string name="region">Region:</string>
+    <string name="wine_category">Kategorie:</string>
+    <string name="flavour">Geschmack:</string>
+    <string name="type">Weinart:</string>
+    <string name="vinification">Vinifikation:</string>
+    <string name="organic">Biologisch:</string>
+    <string name="sugar">Restzucker:</string>
+    <string name="alcohol">Alkoholgehalt:</string>
+    <string name="acidity">Säuregehalt:</string>
+    <string name="sulfur">Schwefelgehalt:</string>
+    <string name="producer">Produzent:</string>
+    <string name="trophy">Trophy:</string>
+    <string name="medal">Medaille:</string>
+    <string name="varietal">Rebsorte:</string>
 
-    <string name="header_general">Allgemeines</string>
-    <string name="header_ingredients">Inhaltsstoffe</string>
-    <string name="header_client">Einreicher</string>
-    <string name="header_management">Verwaltung</string>
+    <string name="result"><b><i>Prämierung</i></b></string>
+    <string name="informations"><b><i>Allgemeine Informationen</i></b></string>
+    <string name="origin"><b><i>Ursprung</i></b></string>
+    <string name="description"><b><i>Beschreibung</i></b></string>
+    <string name="properties"><b><i>Eigenschaften</i></b></string>
 </resources>
