--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/wine_list_item.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/wine_list_item.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/linearLayout"
+android:id="@+id/wineItemLayout"
 android:layout_height="wrap_content"
 android:layout_width="match_parent"
 android:background="?android:attr/activatedBackgroundIndicator"
