Neues Bild hinzugefügt; ResetButton nur noch sichtbar wenn auch Facet ausgewäht; Rebsorte(n) abgeändert in Singular und Plural, entsprechend der Menge

--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_search.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_search.xml
@@ -117,6 +117,7 @@
             android:text="@string/reset_button"
             android:textColor="@color/buttonTextPrimary"
             android:layout_gravity="center"
+            android:visibility="gone"
             android:padding="15dp"/>
 
         <View android:layout_width="fill_parent"
