--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/toolbar_default.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/toolbar_default.xml
@@ -16,8 +16,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:gravity="right"
+        android:gravity="end"
         android:weightSum="10">
+
+        <ImageView
+            android:id="@+id/settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_settings_24"
+            android:layout_marginEnd="15dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
 
