--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_winedetails.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_winedetails.xml
@@ -27,7 +27,7 @@
         android:layout_height="match_parent" >
 
         <LinearLayout
-            android:id="@+id/mainlayout"
+            android:id="@+id/mainLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
